...
    <string name="actionLogoutText">Odjava</string>
    <string name="actionExitScheduleText">Izlaz iz rasporeda</string>
    <string name="registerLoginText">Već ste registrirani?</string>
    <string name="regText">REGISTRACIJA</string>
    <string name="enterConfirmPasswordHint">Unesite ponovo lozinku</string>
    <string name="actionAddFacultyText">Dodaj fakultet</string>
    <string name="facultyActivityTitle">Popis fakulteta</string>
    <string name="newFacultyActivityTitle">Dodaj fakultet</string>
    <string name="btnAddNewFacultyText">DODAJ FAKULTET</string>
    <string name="enterFacultyNameText">Unesite naziv fakulteta</string>
    <string name="enterFacultyNameHint">Npr. FERIT</string>
    <string name="enterStudyOfFacultyText">Unesite naziv studija</string>
    <string name="enterStudyOfFacultyHint">Npr. Informatika</string>
    <string name="enterYearOfStudyText">Unesite godinu studija</string>
    <string name="enterYearOfStudyHint">Npr. 3</string>
...
